# mp-qrcode-helper

./: .gitignore  CMakeLists.txt  README.md  package.json  project.config.json
miniprogram/: app.js  app.json  app.wxss
miniprogram/lib/: zxingwasm.js  zxingwasm.wasm
miniprogram/pages/about/: index.js  index.wxml  index.wxss
miniprogram/pages/history/: index.js  index.wxml  index.wxss
miniprogram/pages/index/: index.js  index.wxml  index.wxss
miniprogram/pages/qrcode/: index.js  index.wxml  index.wxss
miniprogram/utils/: env.js  filter.wxs  history.js  oid.js  options.js  util.js
script/: copy.js  webassembly-polyfill.js
src/: binding.cpp
test/: index.html
